@@ -1,3 +1,7 @@
+2018-09-28  Charlie Zender  <zender@uci.edu>
+
+	* Fixed bug where ss_alb_fct was set to 1.0 not to odsl/odxl for pure Rayleigh scattering atmospheres (neglected absorption)
+
 2018-06-06  Charlie Zender  <zender@uci.edu>
 
 	* Add slr_zen_ngl_dgr_cmd_ln to ease computations for Cheng
